@@ -7,8 +7,7 @@ TabFrames.prototype = {
   addFrame: function(port, isCommandFrame) {
     this.frames[port.sender.frameId] = port;
     this.port = port;
-    if (isCommandFrame)
-      this.commandFrameId = port.sender.frameId;
+    if (isCommandFrame) this.commandFrameId = port.sender.frameId;
   },
 
   removeFrame: function(frameId) {
@@ -16,26 +15,24 @@ TabFrames.prototype = {
   },
 
   focus: function(frameId, disableAnimation) {
-    if (!this.frames.hasOwnProperty(frameId))
-      return;
+    if (!this.frames.hasOwnProperty(frameId)) return;
     this.focusedId = frameId;
     this.frames[frameId].postMessage({
       type: 'focusFrame',
-      disableAnimation: !!disableAnimation,
+      disableAnimation: !!disableAnimation
     });
   },
 
   focusNext: function() {
-    if (this.frames.length <= 0)
-      return;
+    if (this.frames.length <= 0) return;
     var ids = Object.getOwnPropertyNames(this.frames)
+      .map(i => +i)
       .sort((a, b) => a - b);
     var curIdx = Math.max(0, ids.indexOf(this.focusedId));
     var id = ids[(curIdx + 1) % ids.length];
-    if (id === this.commandFrameId)
-      id = ids[(curIdx + 2) % ids.length];
+    if (id === this.commandFrameId) id = ids[(curIdx + 2) % ids.length];
     this.focus(id, false);
-  },
+  }
 };
 
 Frames = {
@@ -52,15 +49,13 @@ Frames = {
 
   removeFrame: function(tabId, frameId) {
     var frame = this.get(tabId);
-    if (!frame)
-      return false;
-    if (frameId === 0)
-      return this.remove(tabId);
+    if (!frame) return false;
+    if (frameId === 0) return this.remove(tabId);
     frame.removeFrame(frameId);
     return true;
   },
 
   get: function(tabId) {
     return this.tabFrames[tabId];
-  },
+  }
 };
